Inicio Profesor y Actividad / Archivo
Se creó la pantalla de Inicio Profesor y se enlazó con la vista de subir archivo, queda sujeto a cambios menores.

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 	margin: 0;
 }
 #minibody {
-	margin-left: 15px;
+	margin-left: 5px;
 }
 #page {
 	width: 960px;
@@ -178,6 +178,19 @@ body {
 	width: 90px;
 	margin-bottom: 6px;
 	margin-right: 10px;
+}
+#minibody ol {
+  counter-reset: item;
+}
+#minibody li{
+  display:block;
+}
+#minibody li:before{
+  content: counters(item, ".") " ";
+  counter-increment: item;
+}
+.crearsubir{
+    margin-left: 45px;
 }
 /*Frames*/
 .frame1{
